--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@
 body,
 html {
   overflow-x: hidden;
-  background-color: #0a1c20;
+  /* background-color: #0a1c20; */
+  background-color: #061417;
+  /* background-color: black; */
   color: white;
 }
 
@@ -47,6 +49,34 @@ html {
 @font-face {
   font-family: clashBold;
   src: url("./assets/fonts/clash/ClashDisplay-Semibold.otf") format("opentype");
+}
+
+@-webkit-keyframes slime {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes slime {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .gradientText {
