--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 
 body,
 html {
   overflow-x: hidden;
   /* background-color: #0a1c20; */
-  background-color: #061417;
+  /* background-color: #061417; */
   /* background-color: black; */
   color: white;
 }
