its not what it is

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
 body,
 html {
   overflow-x: hidden;
-  /* background-color: #0a1c20;
-  background-color: #061417; */
+  background-color: #0a1c20;
+  /* background-color: #061417; */
   /* background-color: black; */
   color: white;
 }
