--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 body,
@@ -28,7 +28,7 @@ body::-webkit-scrollbar-corner {
 }
 
 body::-webkit-scrollbar-track {
-  @apply bg-black/10;
+  @apply bg-[#1ED760];
 }
 
 body::-webkit-scrollbar-track-piece {
@@ -125,4 +125,37 @@ html {
   letter-spacing: -0.03em;
   color: rgba(255, 255, 255, 0);
   text-transform: capitalize;
+}
+
+/* Define your custom gradient classes */
+.gradient-border {
+  position: relative;
+  padding: 1rem; /* Adjust as needed */
+  overflow: hidden;
+}
+
+.gradient-border::before,
+.gradient-border::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 2px solid transparent; /* Set initial transparent border */
+  z-index: -1;
+}
+
+.gradient-border::before {
+  border-image: linear-gradient(#f0feff4d, #f0feff00);
+  border-image-slice: 1;
+  top: 2px; /* Adjust to match border width */
+  left: 2px; /* Adjust to match border width */
+  transform: translate(-4px, -4px); /* Adjust to match border width */
+}
+
+.gradient-border::after {
+  border-image: linear-gradient(#f0feff4d, #f0feff00);
+  border-image-slice: 1;
+  bottom: 2px; /* Adjust to match border width */
+  right: 2px; /* Adjust to match border width */
+  transform: translate(4px, 4px); /* Adjust to match border width */
 }
