--outta commit message

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  /* outline: 1px solid red; */
+  scroll-behavior: smooth;
+  outline: 1px solid red;
 }
 
 body,
