--- a/src/index.css
+++ b/src/index.css
@@ -84,11 +84,11 @@ html {
 }
 
 .gradientText {
-  position: relative;
-  height: fit-content;
-  width: max-content;
+  /* position: relative; */
+  /* height: fit-content; */
+  /* width: max-content; */
   overflow: hidden;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   background: linear-gradient(
     76deg,
     #fde1ff,
@@ -121,35 +121,11 @@ html {
 }
 
 .gradientText h1 {
-  font-size: 4em;
+  /* font-size: 4em; */
+  @apply text-[60px] leading-[50px];
   font-weight: 900;
-  line-height: 1.2;
-  letter-spacing: -0.03em;
+  /* line-height: 1.2; */
+  /* letter-spacing: -0.03em; */
   color: rgba(255, 255, 255, 0);
   text-transform: capitalize;
-}
-
-.hoverbg::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background: #cffaff;
-  left: 0;
-  bottom: -2px;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transform-origin: bottom right;
-  transform-origin: bottom right;
-  -webkit-transition: -webkit-transform 0.25s ease-out;
-  transition: -webkit-transform 0.25s ease-out;
-  transition: transform 0.25s ease-out;
-  transition: transform 0.25s ease-out, -webkit-transform 0.25s ease-out;
-}
-
-.hoverbg:hover > &::before {
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-  -webkit-transform-origin: bottom left;
-  transform-origin: bottom left;
 }
