--guess im done

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   scroll-behavior: smooth;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 
 body,
