--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 
 body,
@@ -121,10 +121,17 @@ html {
 
 .gradientText h1 {
   /* font-size: 4em; */
-  @apply text-[60px] leading-[50px];
-  font-weight: 900;
+  @apply font-clashbold font-semibold text-[40px] leading-[36.9px] text-[#CFFAFF] md:leading-[45px] md:text-[35px] md:max-w-max lg:leading-[73.8px] lg:max-w-[580px] lg:text-[60px];
+  /* font-weight: 900; */
   /* line-height: 1.2; */
   /* letter-spacing: -0.03em; */
   color: rgba(255, 255, 255, 0);
   text-transform: capitalize;
+}
+
+.gradientText h2 {
+  color: rgba(255, 255, 255, 0);
+  text-transform: capitalize;
+
+  @apply flex items-center font-clashbold font-semibold text-white text-[20px] leading-[30.75px] lg:text-[60px] lg:leading-[73.8px];
 }
