chore: trying to add animations, will figure it out later

--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,14 @@
   /* outline: 1px solid red; */
 }
 
-body,
-html {
+body {
   overflow-x: hidden;
   /* background-color: #0a1c20; */
   background-color: #061417;
   /* background-color: black; */
   color: white;
   font-family: "Poppins", sans-serif;
+  /* @apply lg:px-[50%]; */
 }
 
 body::-webkit-scrollbar {
