--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,11 @@ html {
 }
 
 .gradientText {
+  /* position: relative; */
+  /* height: fit-content; */
+  /* width: max-content; */
   overflow: hidden;
+  /* margin-bottom: 30px; */
   background: linear-gradient(
     76deg,
     #fde1ff,
@@ -121,7 +125,11 @@ html {
 }
 
 .gradientText h1 {
+  /* font-size: 4em; */
   @apply font-clashbold font-semibold text-[40px] leading-[36.9px] text-[#CFFAFF] md:leading-[45px] md:text-[35px] md:max-w-max lg:leading-[73.8px] lg:max-w-[580px] lg:text-[60px];
+  /* font-weight: 900; */
+  /* line-height: 1.2; */
+  /* letter-spacing: -0.03em; */
   color: rgba(255, 255, 255, 0);
   text-transform: capitalize;
 }
